--- a/6_web/1.html
+++ b/6_web/1.html
@@ -15,5 +15,6 @@
     <p><strong>We can do anything</strong><br>
     <a href="https://opentutorials.org/course/3084/18418" target="_blank" title="HTML5">HTML is Hyper Text Markup language</a></p>
     <img src="../coding.png" width="450">
+    <img src="coding.png" width="450">
 </body>
 </html>
